Bug 27964 - WAI-ARIA: radio button does not determine its label from text content https://bugs.webkit.org/show_bug.cgi?id=27964

Canonical link: https://commits.webkit.org/38376@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46770 268f45cc-cd09-0410-ab3c-d52691b4dbfc